--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi repellat similique necessitatibus accusamus perferendis, ut explicabo quas modi eum eos minus mollitia odio et sunt illum voluptate cumque facere totam!</p>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quam ducimus perspiciatis eos ea quae facilis doloremque corporis, odit est sit exercitationem, temporibus unde dolor consectetur magnam dolorum at fuga! Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
 							<div class="about_signature">
-								<img src="./signature.svg" alt="Signature (on ssd)">
+								<img src="./signature.png" alt="Signature (on ssd)">
 							</div>
 						</div>
 					</div>
@@ -133,6 +133,56 @@
 			<section class="section portfolio" id="portfolio">
 				<div class="wrap about_wrap">
 					<div class="portfolio_content section_content">
+						<h2>Portfolio</h2>
+						<div class="section_description">
+							Viverra tristique placerat massa est consectetur quisque nu fames lorem ipsum dolor sit amet consectetu.
+						</div>
+						<div class="portfolio_grid">
+							<div class="portfolio_grid_block">
+								<div class="portfolio_grid_caption">
+									<p class="portfolio_title">hi</p>
+									<p>hi</p>
+								</div>
+								<div class="portfolio_grid_img"><img src="red.png" alt=""></div>
+							</div>
+							<div class="portfolio_grid_block">
+								<div class="portfolio_grid_caption">
+									<p class="portfolio_title">hi</p>
+									<p>hi</p>
+								</div>
+								<div class="portfolio_grid_img"><img src="vertical.jpg" alt=""></div>
+							</div>
+							<div class="portfolio_grid_block">
+								<div class="portfolio_grid_caption">
+									<p class="portfolio_title">hi</p>
+									<p>hi</p>
+								</div>
+								<div class="portfolio_grid_img"><img src="red2.png" alt=""></div>
+							</div>
+							<div class="portfolio_grid_block">
+								<div class="portfolio_grid_caption">
+									<p class="portfolio_title">hi</p>
+									<p>hi</p>
+								</div>
+								<div class="portfolio_grid_img"><img src="red2.png" alt=""></div>
+							</div>
+							<div class="portfolio_grid_block">
+								<div class="portfolio_grid_caption">
+									<p class="portfolio_title">hi</p>
+									<p>hi</p>
+								</div>
+								<div class="portfolio_grid_img"><img src="red.png" alt=""></div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section blog" id="blog">
+				<div class="wrap about_wrap">
+					<div class="blog_content section_content">
 						<h2>Development</h2>
 						<div class="section_description">
 							Further sections of this website and my portfolio are curently in development.
@@ -141,13 +191,13 @@
 						
 					</div> -->
 
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
 
 
-	</main>
-</div>
+		</main>
+	</div>
 
 <script>
 	const headerOpener = document.getElementById("header_opener");
