--- a/index.html
+++ b/index.html
@@ -139,35 +139,35 @@
 						</div>
 						<div class="portfolio_grid">
 							<div class="portfolio_grid_block">
-								<a class="portfolio_grid_caption">
+								<a href="#" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
 								<div class="portfolio_grid_img"><img src="red.png" alt=""></div>
 							</div>
 							<div class="portfolio_grid_block">
-								<a class="portfolio_grid_caption">
+								<a href="#" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
 								<div class="portfolio_grid_img"><img src="vertical.jpg" alt=""></div>
 							</div>
 							<div class="portfolio_grid_block">
-								<a class="portfolio_grid_caption">
+								<a href="#" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
 								<div class="portfolio_grid_img"><img src="red2.png" alt=""></div>
 							</div>
 							<div class="portfolio_grid_block">
-								<a class="portfolio_grid_caption">
+								<a href="#" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
 								<div class="portfolio_grid_img"><img src="red2.png" alt=""></div>
 							</div>
 							<div class="portfolio_grid_block">
-								<a class="portfolio_grid_caption">
+								<a href="#" class="portfolio_grid_caption">
 									<p class="portfolio_title">hi</p>
 									<p>hi</p>
 								</a>
