--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@
 				</div>
 			</section>
 
-
 			<section class="section blog" id="blog">
 				<div class="wrap about_wrap">
 					<div class="blog_content section_content">
@@ -187,9 +186,124 @@
 						<div class="section_description">
 							Further sections of this website and my portfolio are curently in development.
 						</div>
-					<!-- <div class="portfolio_grid">
-						
-					</div> -->
+						<ul>
+							<li class="blog_element">
+								<a href="#" class="blog_title">Testing link 1</a>
+								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
+							</li>
+							<li class="blog_element">
+								<a href="#" class="blog_title">Encyclopaedia galactica shores of cosmic</a>
+								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
+							</li>
+							<li class="blog_element">
+								<a href="#" class="blog_title">Testing link 1</a>
+								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
+							</li>
+							<li class="blog_element">
+								<a href="#" class="blog_title">Testing link 1</a>
+								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
+							</li>
+							<li class="blog_element">
+								<a href="#" class="blog_title">Encyclopaedia galactica shores of cosmic</a>
+								<div class="blog_info"><span>Mar 13, 2024</span><span>category</span></div>
+							</li>
+						</ul>
+
+					</div>
+				</div>
+			</section>
+
+			<section class="section skills" id="skills">
+				<div class="wrap about_wrap">
+					<div class="skills_content section_content">
+						<h2>skills</h2>
+						<div class="section_description">
+							Viverra tristique placerat massa est consectetur quisque nu fames lorem ipsum dolor sit amet consectetu.
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At sunt alias provident reprehenderit recusandae voluptas vitae iusto, nulla quo autem dolor in, maxime deserunt nam, veritatis illo eligendi assumenda nemo.</p>
+						<ul class="skills_group">
+							<li>
+								<span class="skills_date">2024</span>
+								<p class="skills_text"><strong>2022-2024</strong> Lorem ipsum dolor sit amet consectetur adipisicing, elit. Assumenda placeat vitae voluptatum expedita nam necessitatibus cum alias soluta ut! Cum soluta quos magnam harum aut nam eius eaque accusamus! Pariatur.</p>
+							</li>
+							<li>
+								<span class="skills_date">2024</span>
+								<p class="skills_text"><strong>2022-2024</strong> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia sint doloremque explicabo veniam cupiditate consequuntur error atque harum consequatur. Quis tempora, assumenda suscipit modi dolorem quia, nihil nobis. Quos, tenetur!</p>
+							</li>
+							<li>
+								<span class="skills_date">2024</span>
+								<p class="skills_text"><strong>2022-2024</strong> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius pariatur id ipsum veniam temporibus, voluptatum in a, repellat quisquam ipsa ut illo soluta totam quod cumque aliquam, culpa facilis tenetur.</p>
+							</li>
+						</ul>
+						<ul class="skills_progress">
+							<li>
+								<span class="skills_name">Coding</span>
+								<div class="skill_fill">
+									<div class="skill_fill_progress" data-fill="10%" style="width: 10%;"></div>
+								</div>
+							</li>
+							<li>
+								<span class="skills_name">Coding</span>
+								<div class="skill_fill">
+									<div class="skill_fill_progress" data-fill="10%" style="width: 90%;"></div>
+								</div>
+							</li>
+							<li>
+								<span class="skills_name">Coding</span>
+								<div class="skill_fill">
+									<div class="skill_fill_progress" data-fill="10%" style="width: 24%;"></div>
+								</div>
+							</li>
+							<li>
+								<span class="skills_name">Coding</span>
+								<div class="skill_fill">
+									<div class="skill_fill_progress" data-fill="10%" style="width: 20%;"></div>
+								</div>
+							</li>
+							<li>
+								<span class="skills_name">Coding</span>
+								<div class="skill_fill">
+									<div class="skill_fill_progress" data-fill="10%" style="width: 10%;"></div>
+								</div>
+							</li>
+							<li>
+								<span class="skills_name">Coding</span>
+								<div class="skill_fill">
+									<div class="skill_fill_progress" data-fill="10%" style="width: 50%;"></div>
+								</div>
+							</li>
+							<li>
+								<span class="skills_name">Coding</span>
+								<div class="skill_fill">
+									<div class="skill_fill_progress" data-fill="10%" style="width: 10%;"></div>
+								</div>
+							</li>
+							<li>
+								<span class="skills_name">Coding</span>
+								<div class="skill_fill">
+									<div class="skill_fill_progress" data-fill="10%" style="width: 10%;"></div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+
+			<section class="section contact" id="contat">
+				<div class="wrap about_wrap">
+					<div class="contact_content section_content">
+						<h2>Contact</h2>
+						<div class="section_description">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At sunt alias provident reprehenderit recusandae voluptas vitae iusto, nulla quo autem dolor in, maxime deserunt nam, veritatis illo eligendi assumenda nemo.</p>
+						<form action="POST">
+							<input id="name" type="text" name="name" placeholder="NAME">
+							<input id="contact-email" type="email" name="email" placeholder="EMAIL">
+							<input id="subject" type="text" name="subject" placeholder="SUBJECT">
+							<textarea id="message" name="message" placeholder="MESSAGE"></textarea>
+							<input type="submit" value="SEND">
+						</form>
 
 					</div>
 				</div>
