--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mine</title>
 	<link rel="stylesheet" href="css.css">
 </head>
@@ -216,7 +216,7 @@
 			<section class="section skills" id="skills">
 				<div class="wrap about_wrap">
 					<div class="skills_content section_content">
-						<h2>skills</h2>
+						<h2>Skills</h2>
 						<div class="section_description">
 							Viverra tristique placerat massa est consectetur quisque nu fames lorem ipsum dolor sit amet consectetu.
 						</div>
