--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 				</div>
 			</section>
 
-			<section class="section contact" id="contat">
+			<section class="section contact" id="contaсt">
 				<div class="wrap about_wrap">
 					<div class="contact_content section_content">
 						<h2>Contact</h2>
