--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 				<div class="wrap home_wrap">
 					<h1>Hello, <br>I'm <span>Yulian Tolkachov</span></h1>
 					<img src="portrait.jpg" alt="">
+					<a class="home_link">	
+						<svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M7.71178 17.2976L24.7944 35.5602L41.877 17.2976" stroke="#F44647" stroke-width="8"/>
+						</svg>
+					</a>
 				</div>
 			</section>
 
