--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 
 		const darkThemeStyles = `
 			:root {
-				--white: #dcdcdc;
+				--white: #f9f9f9;
 				--black: #f5f5f5;
 				--blue: #3b3b91;
 				--blue-lightest: #3f3f75;
@@ -475,7 +475,7 @@
 				--blue-darker: #1b1b4d;
 				--blue-darkest: #0d0d2a;
 				--accent: #ffb900;
-				--accent-muted: #cc9600;
+				--accent-muted: #e6ac00;
 				--blue-deep: #050517;
 			}
 			body {
@@ -495,6 +495,22 @@
 			}
 			h1 > span {
 				background-image: linear-gradient(var(--accent-muted), var(--accent-muted));
+			}
+			@media (max-width: 1199px){
+				header{
+					background: linear-gradient(
+						to right,
+						var(--blue-darker) -15%,
+						var(--blue-darkest) 12%,
+						var(--blue-deep) 60%
+					);
+				}
+				#theme_switch{
+					margin-left: 80px;
+				}
+			}
+			.header_opener{
+				background-color: var(--white);
 			}
 			#theme_switch svg:first-child {
 				display: none;
@@ -574,7 +590,6 @@
 		    }
 		});
 	});
-	
 </script>
 </body>
 </html>
